java-common (0.28) UNRELEASED; urgency=low

  * 

 -- Matthias Klose <doko@debian.org>  Mon, 03 Mar 2008 12:40:19 +0100

java-common (0.27) unstable; urgency=low

  * Updated FAQ. Closes: #449282.
  * Updated debhelper level to 5.

 -- Michael Koch <konqueror@gmx.de>  Mon, 12 Nov 2007 07:59:27 +0100

java-common (0.26) unstable; urgency=low

  * Fixed typo in package description. Closes: #363985.

 -- Michael Koch <konqueror@gmx.de>  Thu, 28 Jun 2007 13:12:04 -0100

java-common (0.25) unstable; urgency=low

  [Matthias Klose]
  * update-java-alternatives: Search for /usr/lib/jvm/.*.jinfo files
    as well, new option --plugin.

 -- Michael Koch <konqueror@gmx.de>  Tue,  9 May 2006 21:33:38 +0000

java-common (0.24) unstable; urgency=low

  [Matthias Klose]
  * Search for the update-java-alternatives description files in
    /usr/lib/jvm/*.jinfo.
  * Add a script update-java-alternatives(8).

  [Michael Koch]
  * Updated DH_COMPAT level to 4.
  * Updated Standards-Version to 3.7.2.
  * Added myself to Uploaders field.
  * Added myself to debian/copyright and updated address of FSF.
  * Moved most of Build-Depends to Build-Depends-Indep.
  * Removed CVS directories.

 -- Michael Koch <konqueror@gmx.de>  Sat,  6 May 2006 22:20:14 +0000

java-common (0.23) unstable; urgency=low

  * Updated the Debian Java FAQ (closes: #156547, #252219), thanks to
    Javier Fernandez-Sanguino Peña
  * policy.xml: corrected typos (closes: #285303), thanks to Bill
    Allombert
  * debian/control:
    + (Uploaders) removed Ola Lundqvist from the uploaders (see
      debian-java mailing list, June 2005)
    + (Uploaders) added myself
    + (Uploaders) added Debian Java Maintainers (closes: #302887)
  * debian/README.Debian: corrected wrong path the the faq and the policy
    and a typo (closes: #197256, #285014), thanks to Vincent Lefevre
  * debian/copyright: moved Ola from current maintainers to previous
    maintainers, updated the file with the debhelper gpl template, added