@@ -1,8 +1,14 @@
 java-common (0.28) UNRELEASED; urgency=low
 
-  * 
+  * Build packages default-jre, default-jre-headless, default-jdk
+    and default-jdk-builddep.
+    Provides an abstraction for the preferred jre/jdk for a specific
+    architecture.  Build-depending on default-jdk-builddep ensures
+    a dependency on java-gcj-compat-dev even if the default jdk is
+    another than java-gcj-compat-dev. Discussion thread starting at
+    http://lists.debian.org/debian-java/2008/03/msg00007.html.
 
- -- Matthias Klose <doko@debian.org>  Mon, 03 Mar 2008 12:40:19 +0100
+ -- Matthias Klose <doko@debian.org>  Wed, 05 Mar 2008 18:28:56 +0100
 
 java-common (0.27) unstable; urgency=low
 
